css/styles.css
body {
  font-family: "Roboto", sans-serif;
  color: #434455;
  background-color: #ffffff;
}
ul {
  list-style-type: none;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
}

a {
  text-decoration: none;
}
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 0;
  margin-bottom: 0;
}

.address {
  font-style: normal;
}

.container {
  max-width: 1158px;
  padding: 0 15px;
  margin: 0 auto;
}
.header {
  border-bottom: 1px solid #e7e9fc;
}
.header-container {
  display: flex;
  padding: 0 15px 0 15px;
}
.header-nav {
  display: flex;
  align-items: center;
}
.header-logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5; /* iris */
  margin-right: 76px;
  padding-top: 24px;
  padding-bottom: 24px;
}

.header-logo .logo-part {
  color: #2e2f42;
}

.header-menu-list {
  color: #2e2f42;
  display: flex;
  gap: 40px;
}

.header-menu-link {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  text-decoration: none;
  color: #2e2f42;
  text-decoration: none;
  padding: 24px 0;
}

.header-menu-link:hover,
.header-menu-link:focus {
  color: #404bbf;
}
.header-address {
  margin-left: auto;
}
.header-address-list {
  display: flex;
  gap: 40px;
}
.header-address-link {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

.header-address-link:hover,
.header-address-link:focus {
  color: #404bbf;
}

.hero {
  background-color: #2e2f42;
  padding-top: 188px;
  padding-bottom: 292px;
  padding: 188px 0 188px;
}
.hero-wrapper {
  padding: 188px 472px 292px 472px;
  max-width: 1200px;
  margin: 0 auto;
}

.hero-title {
  font-weight: 700;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  text-align: center;
  color: #ffffff;

  max-width: 496px;
  margin: 0 auto 48px;
}
.hero-btn {
  display: flex;

  margin: 0 auto;
  display: block;
}

.hero-button {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #ffffff;
  background-color: #4d5ae5;
  border: none;
  border-radius: 4px;
  height: 56px;
  min-width: 169px;
  cursor: pointer;
  align-items: center;
  justify-content: center;
  display: block;
}

.hero-button:hover,
.hero-button:focus {
  background-color: #404bbf;
  cursor: pointer;
}
.features {
  padding-top: 120px;
  padding-bottom: 120px;
}
.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}
.features-list {
  display: flex;
  gap: 24px;
}
.features-item {
  width: calc((100% - 72px) / 4);
}

.feature-subtitle {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px;
}
.features-item-text {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}
.team {
  background-color: #f4f4fd;
  padding-top: 120px;
  padding-bottom: 120px;
}
.team-title {
  text-transform: capitalize;
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  max-width: 162px;
  margin: 0 auto;
  margin-bottom: 72px;
  width: calc((100% - 72px) / 4);
}
.team-list {
  display: flex;
  gap: 24px;
  justify-content: center;
}
.team-item {
  background-color: #ffffff;
  width: calc((100% - 72px) / 4);
  flex-basis: calc((100% - 72px) / 4);

  width: 264px;
  padding-bottom: 32px;
  text-align: center;
  border-radius: 0px 0px 4px 4px;
}
.team-image {
  display: block;
  margin: 0 auto;
  height: 260px;
  width: 100%;
}
.employee-info {
  padding: 32px 0;
}
.team-subtitle {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-top: 24px;
  margin-bottom: 8px;
}
.team-item-text {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
  text-align: center;
}
.portfolio {
  padding-top: 138px;
  padding-bottom: 120px;
  padding: 120px 0 120px 0;
}

.portfolio-title {
  text-transform: capitalize;
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin: 0 auto;
  margin-bottom: 72px;
  max-width: 218px;
}
.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  gap: 48px 24px;
}
.portfolio-item {
  width: 360px;
  background-color: #ffffff;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  padding: 0 16px 32px;
  overflow: hidden;
  border-radius: 4px;
  width: calc((100% - 48px) / 3);
}

.portfolio-image {
  width: 360px;
  height: 300px;
  display: block;
}
.portfolio-info {
  padding: 32px 16px;
  border: 1px solid #e7e9fc;
  border-top: none;
  text-align: left;
}

.portfolio-subtitle {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-top: 32px;

  margin-bottom: 8px;
  text-align: left;
}
.portfolio-item-text {
  font-weight: 400;
  font-size: 16px;

  /* line-height: 24px; */
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
  text-align: left;
}
.footer {
  background-color: #2e2f42;
  padding-top: 100px;
  padding-bottom: 100px;
}
.footer-logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
  margin-bottom: 16px;
  display: inline-block;
}
.logo-part {
  font-weight: 700;
  font-size: 18px;
  line-height: 1.16;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #f4f4fd;
}
.footer-text {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #f4f4fd;
  background-color: #2e2f42;
  max-width: 264px;
}

